--- a/public/styles.css
+++ b/public/styles.css
@@ -3,9 +3,9 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Balsamiq Sans", sans-serif;
-    background-color: #d1fae5;
+    background-color: #ecfdf5;
     position: relative;
-    min-height: 90vh;
+    min-height: 95vh;
     padding:0px 30px;
     padding-bottom: 60px;
     overflow-x: hidden;
@@ -67,7 +67,7 @@ nav ul{
 
 .navTitle{
     font-weight: 600;
-    font-size: 22px;
+    font-size: 26px;
 }
 
 
@@ -89,6 +89,7 @@ footer{
 
 .homePage{
     padding:30px 0;
+    margin: 0;
 }
 
 .blogCard{
@@ -102,21 +103,20 @@ footer{
     display: flex;
     gap:10px;
     border-radius: 20px;
-    background-color: #ecfdf5;
+    background-color: white;
     overflow: hidden;
     height: 25vh;
     align-items: center;
+    justify-content: space-between;
 }
 .blogText{
-    width: 50%;
+    width: 40%;
     padding: 20px;
-
 }
 .blogImage{
     width: 50%;
     height: 100%;
     object-fit: cover;
-
 }
 
 /* createblogpage */
@@ -296,7 +296,7 @@ footer{
     color: #e11d48;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
     .blogCard{
         display: flex;
         flex-direction: column;
