--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,6 +10,7 @@
             Travel Blog
         <% } %>
     </title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/styles.css">
     <script src="https://kit.fontawesome.com/e3aea98539.js" crossorigin="anonymous"></script>
 </head>
