--- a/views/details.ejs
+++ b/views/details.ejs
@@ -54,10 +54,10 @@
               <i class="fa-regular fa-image fa-xl"></i>
               <input name="images" type="file" id="editImageInput" accept="image/png,image/jpeg" class="image-input"/>
             </label>
-            <% if(blog.images && blog.images.length > 0 && blog.images[0].data){ %>
+            <% if(blog.images && blog.images.length > 0){ %>
             <div id="editImageContainer">
-              <img src="data:image/<%=blog.images.contentType%>;base64,<%=blog.images[0].data.toString('base64')%>"  id="editImage" alt="imagePreview" 
-              data-src="data:image/<%=blog.images.contentType%>;base64,<%=blog.images[0].data.toString('base64')%>"/>
+              <img src="<%=blog.images[0].image_path%>"  id="editImage" alt="imagePreview" 
+              data-src="<%=blog.images[0].image_path%>"/>
             </div>
           <%}%>
               <textarea  name="notes" placeholder="Notes (optional)" class="notesTextarea"></textarea>
