--- a/views/details.ejs
+++ b/views/details.ejs
@@ -61,11 +61,10 @@
             </div>
           <%}%>
               <textarea  name="notes" placeholder="Notes (optional)" class="notesTextarea"></textarea>
-          </div>
       </form>
       </div>
-      
     </div>
+  </body>
     <%- include('./partials/footer.ejs') %>
     <script>
       //delete blog
