updated preload image css

--- a/public/styles.css
+++ b/public/styles.css
@@ -114,6 +114,11 @@ footer{
     height: 100%;
     object-fit: cover;
 }
+.preloadImage{
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* createblogpage */
 .createPage{
