--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,16 @@
     <%- include('./partials/head.ejs') %>
 <body>
     <%- include('./partials/nav.ejs')%>
-    <div class="homePage"  style="display: none;">
+    <div class="homePage">
         <% if (blogs.length>0){ %>
             <div class="blogCard">
             <% blogs.forEach(blog=>{%>
                 <a href="/blogs/<%=blog._id%>">
                 <% if(blog.images && blog.images.length>0){ %>
-                    <img src="<%=blog.images[0].image_path%>" class="blogImage" alt="image" onload="imageLoaded()"/>
+                    <div style="width: 50%; height: 100%;" class="loading">
+                        <p style="text-align: center;">Loading...</p>
+                    </div>
+                    <img src="<%=blog.images[0].image_path%>" class="blogImage" style="display: none;" alt="image" onload="imageLoaded()"/>
                 <% } %>
                 <div class="blogText">
                     <h3 class="title"><%= blog.title %></h3>
@@ -30,19 +33,20 @@
             <p style="text-align: center;">No Contents Available.</p>
         <% } %>
     </div>
-    <p style="text-align: center;" id="loading">Loading...</p>
     <%- include('./partials/footer.ejs') %>
     <script>
-        const homePage = document.querySelector('.homePage');
-        const loading = document.getElementById('loading')
+        const blogImage = document.querySelectorAll('.blogImage');
+        const loading = document.querySelectorAll('.loading')
 
         // Preload the actual image
         function imageLoaded() {
             console.log('loaded')
-            setTimeout(()=>{
-                homePage.style.display='block'
-                loading.style.display='none'
-            },100)
+                loading.forEach(load=>{
+                    load.style.display='none'
+                })
+                blogImage.forEach(image=>{
+                    image.style.display='block'
+                })
         };
 
     </script>
