--- a/public/styles.css
+++ b/public/styles.css
@@ -210,7 +210,7 @@ footer{
 #imagePreviewContainer{
     display: none;
 }
-#imagePreviewContainer,#editImageContainer{
+#imagePreviewContainer,.editImageContainer{
     height:25vh;
     width: 25vh;
     border-radius: 10px;
@@ -223,16 +223,25 @@ footer{
 }
 
 .custom-image-input{
-    display: inline-block;
     cursor: pointer;
+    color:rgb(76, 76, 76);
+
+}
+.image-container{
     border: 2px solid rgb(76, 76, 76);
     padding: 16px;
     border-radius: 10px;
     color:rgb(76, 76, 76);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 9px;
 
 }
 .image-input{
     display: none;
+
 }
 
 
