--- a/public/styles.css
+++ b/public/styles.css
@@ -120,6 +120,28 @@ footer{
     object-fit: cover;
 }
 
+#searchForm{
+    display: flex; 
+    justify-content: end; 
+    align-items: center; 
+    gap: 3px;
+    margin-bottom: 13px;
+}
+
+#searchForm button{
+    border: none; 
+    background: none; 
+    cursor: pointer;
+    color: rgb(77, 77, 77);
+}
+
+#searchInput{
+    padding: 10px; 
+    font-size: 16px; 
+    border-radius: 10px; 
+    border: none; 
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.03);
+}
 /* createblogpage */
 .createPage{
     text-align: center;
