--- a/public/styles.css
+++ b/public/styles.css
@@ -120,7 +120,7 @@ footer{
     object-fit: cover;
 }
 
-#searchForm{
+/* #searchForm{
     display: flex; 
     justify-content: end; 
     align-items: center; 
@@ -141,7 +141,7 @@ footer{
     border-radius: 10px; 
     border: none; 
     box-shadow: 2px 2px rgba(0, 0, 0, 0.03);
-}
+} */
 /* createblogpage */
 .createPage{
     text-align: center;
